Add helper to make creative tab additions easier