@@ -7,7 +7,6 @@ import net.minecraft.tags.BlockTags;
 import net.minecraft.tags.ItemTags;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
-import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.ButtonBlock;
 import net.minecraft.world.level.block.CeilingHangingSignBlock;
@@ -21,7 +20,6 @@ import net.minecraft.world.level.block.WallHangingSignBlock;
 import net.minecraft.world.level.block.WallSignBlock;
 import net.minecraft.world.level.block.state.properties.WoodType;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -181,7 +179,7 @@ public class WoodBlockObject extends FenceBuildingBlockObject {
 
   @Override
   public List<Block> values() {
-    return Arrays.asList(
+    return List.of(
       get(), getSlab(), getStairs(), getFence(),
       getLog(), getStrippedLog(), getWood(), getStrippedWood(),
       getFenceGate(), getDoor(), getTrapdoor(),
@@ -190,7 +188,7 @@ public class WoodBlockObject extends FenceBuildingBlockObject {
   }
 
   @Override
-  public void forEach(Consumer<ItemLike> consumer) {
+  public void forEach(Consumer<? super Block> consumer) {
     super.forEach(consumer);
     consumer.accept(getFenceGate());
     consumer.accept(getLog());
